# MOM6-examples

./: .gitmodules
ice_ocean_SIS2/Baltic/: diag_table
ice_ocean_SIS2/SIS2_bergs_cgrid/: MOM_parameter_doc.layout  SIS_parameter_doc.layout
ocean_only/benchmark/: MOM_parameter_doc.layout
ocean_only/double_gyre/: MOM_input  MOM_parameter_doc.all  MOM_parameter_doc.layout  MOM_parameter_doc.short
ocean_only/global_ALE/common/: input.nml
ocean_only/global_ALE/z/: MOM_parameter_doc.layout
ocean_only/nonBous_global/: MOM_parameter_doc.layout
ocean_only/resting/common/: MOM_input
ocean_only/resting/z/: MOM_parameter_doc.layout
src/: CMakeLists.txt
tools/tests/: conftest.py  dump_all_diagnostics.py  experiment.py  model.py  run_config.py  test_build.py  test_diagnostic_output.py  test_run.py  test_setup.py  test_units.py  test_valgrind.py  valgrind_suppressions.txt
